// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common Checkbox render Render Checkbox with props 1`] = `
<li>
  <label
    className="label"
    htmlFor="check-box-name"
  >
    <input
      className="input"
      id="check-box-name"
      name="check-box-name"
      type="checkbox"
      value="check-box-name"
    />
    <span
      className="checkbox"
    />
    Check Box Title
  </label>
</li>
`;

exports[`Common Checkbox render Render empty Checkbox 1`] = `
<li>
  <label
    className="label"
  >
    <input
      className="input"
      type="checkbox"
    />
    <span
      className="checkbox"
    />
  </label>
</li>
`;
